--- a/pom.xml
+++ b/pom.xml
@@ -54,32 +54,12 @@
 
     <repositories>
         <repository>
-            <id>java-net-repo</id>
-            <url>https://maven.java.net/content/repositories/public/</url>
-        </repository>
-        <repository>
             <id>spigotmc-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-        <repository>
-            <id>jboss-repo</id>
-            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>spring-repo</id>
-            <url>https://repo.spring.io/release</url>
-        </repository>
-        <repository>
-            <id>sonatype-snapshots-repo</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
             <repository>
-                <id>inventive-repo</id>
-                <url>https://repo.inventivetalent.org/content/groups/public/</url>
+                <id>jitpack.io</id>
+                <url>https://jitpack.io</url>
             </repository>
     </repositories>
 
@@ -92,7 +72,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.16.5-R0.1-SNAPSHOT</version>
+            <version>1.17-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -115,6 +95,12 @@
             <groupId>com.github.juliarn</groupId>
             <artifactId>npc-lib</artifactId>
             <version>2.5-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11</version>
+            <type>pom</type>
         </dependency>
     </dependencies>
 </project>
