--- a/pom.xml
+++ b/pom.xml
@@ -2,120 +2,143 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-<groupId>RiseCity</groupId>
-<artifactId>RiseCity</artifactId>
-<version>1.1</version>
-<packaging>jar</packaging>
+    <groupId>rise</groupId>
+    <artifactId>city</artifactId>
+    <version>0.1</version>
+    <packaging>jar</packaging>
 
-<name>RiseCity</name>
-<properties>
-<java.version>1.8</java.version>
-<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-</properties>
+    <name>RiseCity</name>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+    <url>spmc.ml</url>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
-<repositories>
-<repository>
-    <id>spigotmc-repo</id>
-    <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
-</repository>
-<repository>
-    <id>jitpack.io</id>
-    <url>https://jitpack.io</url>
-</repository>
-    <repository>
-        <id>jcenter</id>
-        <url>https://jcenter.bintray.com/</url>
-    </repository>
-</repositories>
+    <repositories>
+        <repository>
+            <id>spigotmc-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+    </repositories>
 
-<dependencies>
-<dependency>
-    <groupId>org.java-websocket</groupId>
-    <artifactId>Java-WebSocket</artifactId>
-    <version>1.5.1</version>
-</dependency>
-<dependency>
-    <groupId>org.spigotmc</groupId>
-    <artifactId>spigot-api</artifactId>
-    <version>1.17-R0.1-SNAPSHOT</version>
-    <scope>provided</scope>
-</dependency>
-<dependency>
-    <groupId>org.jetbrains</groupId>
-    <artifactId>annotations</artifactId>
-    <version>LATEST</version>
-    <scope>compile</scope>
-</dependency>
-    <dependency>
-        <groupId>net.bytebuddy</groupId>
-        <artifactId>byte-buddy</artifactId>
-        <version>LATEST</version>
-    </dependency>
-<dependency>
-    <groupId>com.github.JordanOsterberg</groupId>
-    <artifactId>JScoreboards</artifactId>
-    <version>1.0.1-RELEASE</version>
-</dependency>
-<dependency>
-    <groupId>com.github.jely2002</groupId>
-    <artifactId>StandaloneCrazyAdvancementsAPI</artifactId>
-    <version>1.13.11</version>
-</dependency>
-<dependency>
-    <groupId>com.github.juliarn</groupId>
-    <artifactId>npc-lib</artifactId>
-    <version>2.5-RELEASE</version>
-</dependency>
-    <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>15.0.1</version>
-    </dependency>
-<dependency>
-    <groupId>xyz.xenondevs</groupId>
-    <artifactId>particle</artifactId>
-    <version>1.6.2</version>
-</dependency>
-    <dependency>
-        <groupId>com.github.johnnyjayjay</groupId>
-        <artifactId>spigot-maps</artifactId>
-        <version>2.1.1</version>
-    </dependency>
-    <dependency>
-        <groupId>com.github.noonmaru</groupId>
-        <artifactId>tap</artifactId>
-        <version>3.2.8</version>
-    </dependency>
-    <dependency>
-        <groupId>com.github.kangarko</groupId>
-        <artifactId>Foundation</artifactId>
-        <version>5.9.0</version>
-    </dependency>
-    <dependency>
-        <groupId>com.github.AlbeMiglio.PowerLib</groupId>
-        <artifactId>PowerLib</artifactId>
-        <version>1.1.9</version>
-    </dependency>
-<dependency>
-    <groupId>io.netty</groupId>
-    <artifactId>netty-all</artifactId>
-    <version>4.1.65.Final</version>
-</dependency>
-    
-</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.17-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>LATEST</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.JordanOsterberg</groupId>
+            <artifactId>JScoreboards</artifactId>
+            <version>1.0.1-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jely2002</groupId>
+            <artifactId>StandaloneCrazyAdvancementsAPI</artifactId>
+            <version>1.13.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.juliarn</groupId>
+            <artifactId>npc-lib</artifactId>
+            <version>2.5-RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>15.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.xenondevs</groupId>
+            <artifactId>particle</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.johnnyjayjay</groupId>
+            <artifactId>spigot-maps</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.noonmaru</groupId>
+            <artifactId>tap</artifactId>
+            <version>3.2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.kangarko</groupId>
+            <artifactId>Foundation</artifactId>
+            <version>5.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.AlbeMiglio.PowerLib</groupId>
+            <artifactId>PowerLib</artifactId>
+            <version>1.1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.65.Final</version>
+        </dependency>
+    </dependencies>
 </project>
